changes for config manager properties